--- a/Spring_Exercice_Etudiant/src/main/resources/templates/detail.html
+++ b/Spring_Exercice_Etudiant/src/main/resources/templates/detail.html
@@ -9,13 +9,13 @@
 <div class="container">
     <h1> Detail de l'étudiant sélectionné</h1>
 
-
+    <p> Identifiant : <span th:text="${student.getId()}"></span></p>
     <p>Nom de l'étudiant : <span th:text="${student.getLastName()}"></span></p>
     <p>Prénom : <span th:text="${student.getFirstName()}"></span></p>
     <p>Age : <span th:text="${student.getAge()}"></span></p>
     <p>Email : <span th:text="${student.getEmail()}"></span></p>
     <a th:href="@{/delete(studentId=${student.getId()})}" class="btn btn-success" id="studentId">Supprimer Etudiant</a>
-    <a th:href="@{/inscription(studentId=${student.getId()})}" class="btn btn-success" >Modifier Etudiant</a>
+    <a th:href="@{/inscription(studentId=${student.getId()})}" class="btn btn-success">Modifier Etudiant</a>
     <br>
 
     <a th:href="@{/list}">Retour Liste</a>
