--- a/Spring_Exercice_Cuisine/src/main/resources/templates/categories/listeCategories.html
+++ b/Spring_Exercice_Cuisine/src/main/resources/templates/categories/listeCategories.html
@@ -4,6 +4,7 @@
     <title>Liste des catégories</title>
 </head>
 <body>
+<div class="container">
 <h2>Liste des catégories</h2>
 <table>
     <thead>
@@ -27,5 +28,6 @@
     </tbody>
 </table>
 <a th:href="@{/categories/ajout}">Ajouter une catégorie</a>
+</div>
 </body>
 </html>
