--- a/Spring_Exercice_Cuisine/src/main/resources/templates/categories/modifierCategorie.html
+++ b/Spring_Exercice_Cuisine/src/main/resources/templates/categories/modifierCategorie.html
@@ -2,21 +2,24 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Modifier une catégorie</title>
+    <link th:replace="~{home :: bootstrap}">
 </head>
 <body>
+<div class="container">
 <h2>Modifier une catégorie</h2>
 <form th:action="@{/categories/modifier/{id}(id=${categorie.id})}" th:object="${categorie}" method="post">
     <div>
         <label for="nom">Nom:</label>
-        <input type="text" id="nom" th:field="*{nom}" required/>
+        <input class="form-control" type="text" id="nom" th:field="*{nom}" required/>
     </div>
     <div>
         <label for="description">Description:</label>
-        <textarea id="description" th:field="*{description}" required></textarea>
+        <textarea class="form-control" id="description" th:field="*{description}" required></textarea>
     </div>
     <div>
-        <button type="submit">Modifier</button>
+        <button class="btn btn-primary" type="submit">Modifier</button>
     </div>
 </form>
+</div>
 </body>
 </html>
