--- a/Spring_Exercice_Cuisine/src/main/resources/templates/recettes/ajoutRecette.html
+++ b/Spring_Exercice_Cuisine/src/main/resources/templates/recettes/ajoutRecette.html
@@ -4,29 +4,33 @@
     <title>Ajouter une recette</title>
 </head>
 <body>
+<div class="container">
 <h2>Ajouter une recette</h2>
 <form th:action="@{/recettes/ajout}" th:object="${recette}" method="post">
+    <div class="form-group p-2">
     <div>
         <label for="nom">Nom:</label>
-        <input type="text" id="nom" th:field="*{nom}" required/>
+        <input class="form-control" type="text" id="nom" th:field="*{nom}" required/>
     </div>
     <div>
         <label for="ingredients">Ingrédients:</label>
-        <textarea id="ingredients" th:field="*{ingredients}" required></textarea>
+        <textarea class="form-control" id="ingredients" th:field="*{ingredients}" required></textarea>
     </div>
     <div>
         <label for="instructions">Instructions:</label>
-        <textarea id="instructions" th:field="*{instructions}" required></textarea>
+        <textarea class="form-control" id="instructions" th:field="*{instructions}" required></textarea>
     </div>
     <div>
         <label for="categorie">Catégorie:</label>
-        <select id="categorie" th:field="*{categorie}" required>
-            <option th:each="categorie : ${categories}" th:value="${categorie}" th:text="${categorie.nom}"></option>
+        <select id="categorie" th:field="*{idCategorie}" required>
+            <option th:each="categorie : ${categories}" th:value="${categorie.getId()}" th:text="${categorie.nom}"></option>
         </select>
     </div>
     <div>
-        <button type="submit">Ajouter</button>
+        <button class="btn btn-primary" type="submit">Ajouter</button>
+    </div>
     </div>
 </form>
+</div>
 </body>
 </html>
