--- a/Spring_Exercice_Cuisine/src/main/resources/templates/recettes/modifierRecette.html
+++ b/Spring_Exercice_Cuisine/src/main/resources/templates/recettes/modifierRecette.html
@@ -2,31 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Modifier une recette</title>
+    <link th:replace="~{home :: bootstrap}">
 </head>
 <body>
+<div class="container">
 <h2>Modifier une recette</h2>
 <form th:action="@{/recettes/modifier/{id}(id=${recette.id})}" th:object="${recette}" method="post">
+    <div class="form-group p-2">
     <div>
         <label for="nom">Nom:</label>
-        <input type="text" id="nom" th:field="*{nom}" required/>
+        <input class="form-control" type="text" id="nom" th:field="*{nom}" required/>
     </div>
     <div>
         <label for="ingredients">Ingrédients:</label>
-        <textarea id="ingredients" th:field="*{ingredients}" required></textarea>
+        <textarea class="form-control" id="ingredients" th:field="*{ingredients}" required></textarea>
     </div>
     <div>
         <label for="instructions">Instructions:</label>
-        <textarea id="instructions" th:field="*{instructions}" required></textarea>
+        <textarea class="form-control" id="instructions" th:field="*{instructions}" required></textarea>
     </div>
     <div>
         <label for="categorie">Catégorie:</label>
-        <select id="categorie" th:field="*{categorie}" required>
-            <option th:each="categorie : ${categories}" th:value="${categorie}" th:text="${categorie.nom}"></option>
+        <select class="form-control" id="categorie" th:field="*{idCategorie}" >
+            <option th:each="categorie : ${categories}" th:value="${categorie.getId()}" th:text="${categorie.nom}"></option>
         </select>
     </div>
     <div>
-        <button type="submit">Modifier</button>
+        <button class="btn btn-primary" type="submit">Modifier</button>
+    </div>
     </div>
 </form>
+</div>
 </body>
 </html>
