commit Exercice Meuble

--- a/Spring_Exercice_Meuble/src/main/resources/templates/furniture/listFurniture.html
+++ b/Spring_Exercice_Meuble/src/main/resources/templates/furniture/listFurniture.html
@@ -37,5 +37,7 @@
     </tbody>
 </table>
 <a th:href="@{/furniture/addFurniture}">Ajouter un meuble</a>
+<br>
+<a th:href="@{/cart}">Accéder au panier</a>
 </body>
 </html>
