--- a/Spring_Exercice_Meuble/src/main/resources/templates/furniture/editFurniture.html
+++ b/Spring_Exercice_Meuble/src/main/resources/templates/furniture/editFurniture.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang ="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link th:replace="~{home :: bootstrap}">
     <title>Modifier un meuble</title>
 </head>
 <body>
 <h2>Modifier un meuble</h2>
 <form th:action="@{/furniture/edit}" th:object="${furniture}" method="post">
+    <div class="container">
     <input type="hidden" th:field="*{id}"/>
     <div>
         <label for="name">Nom:</label>
-        <input type="text" id="name" th:field="*{name}" required/>
+        <input class="form-control" type="text" id="name" th:field="*{name}" required/>
     </div>
     <div>
         <label for="description">Description:</label>
-        <textarea id="description" th:field="*{description}" required></textarea>
+        <textarea class="form-control" id="description" th:field="*{description}" required></textarea>
     </div>
     <div>
         <label for="price">Prix:</label>
-        <input type="number" id="price" th:field="*{price}" required/>
+        <input class="form-control" type="number" id="price" th:field="*{price}" required/>
     </div>
     <div>
         <label for="stock">Stock:</label>
-        <input type="number" id="stock" th:field="*{stock}" required/>
+        <input class="form-control" type="number" id="stock" th:field="*{stock}" required/>
     </div>
     <div>
-        <button type="submit">Modifier</button>
+        <button class="btn btn-success" type="submit">Modifier</button>
+    </div>
     </div>
 </form>
 </body>
